gccida/c3/save_for_inline
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:898:4: error: expected ';' after expression
rtx v4; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:898:5: error: use of undeclared identifier 'v4'
rtx v4; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:905:6: error: use of undeclared identifier 'elem'; did you mean 'else'?
rtx *elem; // rbp 
     ^~~~
     else
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:905:6: error: expected expression
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:909:4: error: expected ';' after expression
rtx v15; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:909:5: error: use of undeclared identifier 'v15'
rtx v15; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:910:4: error: expected ';' after expression
rtx v16; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:910:5: error: use of undeclared identifier 'v16'
rtx v16; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:945:1: error: use of undeclared identifier 'elem'
elem = v9->elem; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:961:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)rtl->fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:971:2: error: use of undeclared identifier 'elem'; did you mean 'else'?
*elem = rtl; 
 ^~~~
 else
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:971:2: error: expected expression
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:974:23: error: use of undeclared identifier 'machine_mode'
v15 = gen_realpart( ( machine_mode)*( unsigned __int8 *)( rtl->fld[0].rtwint + 2), rtl); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:974:1: error: use of undeclared identifier 'v15'
v15 = gen_realpart( ( machine_mode)*( unsigned __int8 *)( rtl->fld[0].rtwint + 2), rtl); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:975:23: error: use of undeclared identifier 'machine_mode'
v16 = gen_imagpart( ( machine_mode)*( ( unsigned __int8 *)v15 + 2), rtl); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:975:59: error: use of undeclared identifier 'v15'
v16 = gen_imagpart( ( machine_mode)*( ( unsigned __int8 *)v15 + 2), rtl); 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:975:1: error: use of undeclared identifier 'v16'
v16 = gen_imagpart( ( machine_mode)*( ( unsigned __int8 *)v15 + 2), rtl); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:976:17: error: use of undeclared identifier 'v15'
if ( *( _WORD *)v15 == 61 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/integrate.c:977:14: error: use of undeclared identifier 'v15'
parmdecl_map[v15->fld[0].rtuint] = arguments; 
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/save_for_inline/src/obj/integrate.o] Error 1
